# simple_shared_lib

./: README.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  cool_lib.h  native-lib.cpp
app/src/main/java/com/simplesharedlib/: MainActivity.kt
